--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -200,7 +200,7 @@
                             </tr>
                             <tr>
 	                           <td><a href="@SOURCE_CODE@" target="_blank"><img
-                                        src="images/ome_source_code.png"
+                                        src="images/bf_source_code.png"
                                         alt="Zipped Source Code" /></a></td>
                                 <td align="center">@SOURCE_CODE_SIZE@</td>
                                 <td>@SOURCE_CODE_BASE@</td>
@@ -442,7 +442,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@SOURCE_CODE@" target="_blank"><img
-                                        src="images/ome_source_code.png"
+                                        src="images/bf_source_code.png"
                                         alt="Zipped Source Code" /></a></td>
                                 <td align="center">@SOURCE_CODE_SIZE@</td>
                                 <td>@SOURCE_CODE_BASE@</td>
