Expose SHA1 rather than MD5 in the downloads page

--- a/ice_downloads.html
+++ b/ice_downloads.html
@@ -73,16 +73,16 @@
 	                                   64-bit Ice for Windows x64 with 64-bit 
 	                                   Python 2.7</a></td>
                                 <td align="center">@ICE_X64_WIN_SIZE@</td>
-                                <td align="center">@ICE_X64_WIN_MD5@ (<a
-                                        href="@ICE_X64_WIN@.md5"
-                                    >MD5</a>)</td>
+                                <td align="center">@ICE_X64_WIN_SHA1@ (<a
+                                        href="@ICE_X64_WIN@.sha1"
+                                    >SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@ICE_X86_WIN@">32-bit Ice for Windows x86 with 32-bit Python 2.7</a></td>
                                 <td align="center">@ICE_X86_WIN_SIZE@</td>
-                                <td align="center">@ICE_X86_WIN_MD5@ (<a
-                                        href="@ICE_X86_WIN@.md5"
-                                    >MD5</a>)</td>
+                                <td align="center">@ICE_X86_WIN_SHA1@ (<a
+                                        href="@ICE_X86_WIN@.sha1"
+                                    >SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
@@ -99,14 +99,14 @@
 	                            <tr>
 	                                <td><a href="@SOURCE_CODE@" target="_blank">Ice source code</a></td>
 	                                <td align="center">@SOURCE_CODE_SIZE@</td>
-	                                <td align="center">@SOURCE_CODE_MD5@ (<a
-	                                        href="@SOURCE_CODE@.md5">MD5</a>)</td>
+	                                <td align="center">@SOURCE_CODE_SHA1@ (<a
+	                                        href="@SOURCE_CODE@.sha1">SHA1</a>)</td>
 	                            </tr>
 	                            <tr>
 	                                <td><a href="@THIRD_PARTY@" target="_blank">Ice third party source code</a></td>
 	                                <td align="center">@THIRD_PARTY_SIZE@</td>
-	                                <td align="center">@THIRD_PARTY_MD5@ (<a
-	                                        href="@SOURCE_CODE@.md5">MD5</a>)</td>
+	                                <td align="center">@THIRD_PARTY_SHA1@ (<a
+	                                        href="@SOURCE_CODE@.sha1">SHA1</a>)</td>
 	                            </tr>
 	                        </tbody>
 	                    </table>
