--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -98,8 +98,8 @@
                                      /></a></td>
                                 <td align="center">@MTOOLS_WIN_SIZE@</td>
                                 <td>@MTOOLS_WIN_BASE@</td>
-                                <td align="center">@MTOOLS_WIN_MD5@ (<a
-                                        href="@MTOOLS_WIN@.md5">MD5</a>)</td>
+                                <td align="center">@MTOOLS_WIN_SHA1@ (<a
+                                        href="@MTOOLS_WIN@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@MTOOLS_MAC@"><img
@@ -108,8 +108,8 @@
                                      /></a></td>
                                 <td align="center">@MTOOLS_MAC_SIZE@</td>
                                 <td>@MTOOLS_MAC_BASE@</td>
-                                <td align="center">@MTOOLS_MAC_MD5@ (<a
-                                        href="@MTOOLS_MAC@.md5">MD5</a>)</td>
+                                <td align="center">@MTOOLS_MAC_SHA1@ (<a
+                                        href="@MTOOLS_MAC@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
