--- a/searcher_downloads.html
+++ b/searcher_downloads.html
@@ -95,8 +95,8 @@
                                      /></a></td>
                                 <td align="center">@SEARCHER_SIZE@</td>
                                 <td>@SEARCHER_BASE@</td>
-                                <td align="center">@SEARCHER_MD5@ (<a
-                                        href="@SEARCHER@.md5">MD5</a>)</td>
+                                <td align="center">@SEARCHER_SHA1@ (<a
+                                        href="@SEARCHER@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@PYSLID@"><img
@@ -104,8 +104,8 @@
                                         alt="pyslid download" /></a></td>
                                 <td align="center">@PYSLID_SIZE@</td>
                                 <td>@PYSLID_BASE@</td>
-                                <td align="center">@PYSLID_MD5@ (<a
-                                        href="@PYSLID@.md5">MD5</a>)</td>
+                                <td align="center">@PYSLID_SHA1@ (<a
+                                        href="@PYSLID@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@RICERCA@"><img
@@ -113,8 +113,8 @@
                                         alt="ricerca download" /></a></td>
                                 <td align="center">@RICERCA_SIZE@</td>
                                 <td>@RICERCA_BASE@</td>
-                                <td align="center">@RICERCA_MD5@ (<a
-                                        href="@RICERCA@.md5">MD5</a>)</td>
+                                <td align="center">@RICERCA_SHA1@ (<a
+                                        href="@RICERCA@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
