--- a/utrack_downloads.html
+++ b/utrack_downloads.html
@@ -77,8 +77,8 @@
                                         alt="Zipped Source Code" /></a></td>
                                 <td align="center">@SOURCE_CODE_SIZE@</td>
                                 <td>@SOURCE_CODE_BASE@</td>
-                                <td align="center">@SOURCE_CODE_MD5@ (<a
-                                        href="@SOURCE_CODE@.md5">MD5</a>)</td>
+                                <td align="center">@SOURCE_CODE_SHA1@ (<a
+                                        href="@SOURCE_CODE@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
