--- a/webtagging_downloads.html
+++ b/webtagging_downloads.html
@@ -91,8 +91,8 @@
                                      /></a></td>
                                 <td align="center">@WEBTAGGING_SIZE@</td>
                                 <td>@WEBTAGGING_BASE@</td>
-                                <td align="center">@WEBTAGGING_MD5@ (<a
-                                        href="@WEBTAGGING@.md5">MD5</a>)</td>
+                                <td align="center">@WEBTAGGING_SHA1@ (<a
+                                        href="@WEBTAGGING@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
