--- a/figure_downloads.html
+++ b/figure_downloads.html
@@ -91,8 +91,8 @@
                                         alt="OMERO.figure Download" /></a></td>
                                 <td align="center">@FIGURE_SIZE@</td>
                                 <td>@FIGURE_BASE@</td>
-                                <td align="center">@FIGURE_MD5@ (<a
-                                        href="@FIGURE@.md5">MD5</a>)</td>
+                                <td align="center">@FIGURE_SHA1@ (<a
+                                        href="@FIGURE@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
