--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -119,9 +119,9 @@
                                      /></a></td>
                                 <td align="center">@FLIMFIT_50_MAC_SIZE@</td>
                                 <td>@FLIMFIT_50_MAC_BASE@</td>
-                                <td align="center">@FLIMFIT_50_MAC_MD5@ (<a
-                                        href="@FLIMFIT_50_MAC@.md5"
-                                    >MD5</a>)</td>
+                                <td align="center">@FLIMFIT_50_MAC_SHA1@ (<a
+                                        href="@FLIMFIT_50_MAC@.sha1"
+                                    >SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@FLIMFIT_50_WIN@"><img
@@ -130,9 +130,9 @@
                                      /></a></td>
                                 <td align="center">@FLIMFIT_50_WIN_SIZE@</td>
                                 <td>@FLIMFIT_50_WIN_BASE@</td>
-                                <td align="center">@FLIMFIT_50_WIN_MD5@ (<a
-                                        href="@FLIMFIT_50_WIN@.md5"
-                                    >MD5</a>)</td>
+                                <td align="center">@FLIMFIT_50_WIN_SHA1@ (<a
+                                        href="@FLIMFIT_50_WIN@.sha1"
+                                    >SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
