--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -124,8 +124,8 @@
                                      /></a></td>
                                 <td align="center">@WIN_CLIENTS_SIZE@</td>
                                 <td>@WIN_CLIENTS_BASE@</td>
-                                <td align="center">@WIN_CLIENTS_MD5@ (<a
-                                        href="@WIN_CLIENTS@.md5">MD5</a>)</td>
+                                <td align="center">@WIN_CLIENTS_SHA1@ (<a
+                                        href="@WIN_CLIENTS@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@MAC_CLIENTS@"><img
@@ -134,8 +134,8 @@
                                      /></a></td>
                                 <td align="center">@MAC_CLIENTS_SIZE@</td>
                                 <td>@MAC_CLIENTS_BASE@</td>
-                                <td align="center">@MAC_CLIENTS_MD5@ (<a
-                                        href="@MAC_CLIENTS@.md5">MD5</a>)</td>
+                                <td align="center">@MAC_CLIENTS_SHA1@ (<a
+                                        href="@MAC_CLIENTS@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@LINUX_CLIENTS@"><img
@@ -143,8 +143,8 @@
                                         alt="Linux Client Download" /></a></td>
                                 <td align="center">@LINUX_CLIENTS_SIZE@</td>
                                 <td>@LINUX_CLIENTS_BASE@</td>
-                                <td align="center">@LINUX_CLIENTS_MD5@ (<a
-                                        href="@LINUX_CLIENTS@.md5">MD5</a>)</td>
+                                <td align="center">@LINUX_CLIENTS_SHA1@ (<a
+                                        href="@LINUX_CLIENTS@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
@@ -185,8 +185,8 @@
                                      /></a></td>
                                 <td align="center">@IJ_CLIENTS_SIZE@</td>
                                 <td>@IJ_CLIENTS_BASE@</td>
-                                <td align="center">@IJ_CLIENTS_MD5@ (<a
-                                        href="@IJ_CLIENTS@.md5">MD5</a>)</td>
+                                <td align="center">@IJ_CLIENTS_SHA1@ (<a
+                                        href="@IJ_CLIENTS@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@MATLAB_CLIENTS@"><img
@@ -194,9 +194,9 @@
                                         alt="Matlab Plugin Download" /></a></td>
                                 <td align="center">@MATLAB_CLIENTS_SIZE@</td>
                                 <td>@MATLAB_CLIENTS_BASE@</td>
-                                <td align="center">@MATLAB_CLIENTS_MD5@ (<a
-                                        href="@MATLAB_CLIENTS@.md5"
-                                    >MD5</a>)</td>
+                                <td align="center">@MATLAB_CLIENTS_SHA1@ (<a
+                                        href="@MATLAB_CLIENTS@.sha1"
+                                    >SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
@@ -251,8 +251,8 @@
                                      /></a></td>
                                 <td align="center">@SERVER34_SIZE@</td>
                                 <td>@SERVER34_BASE@</td>
-                                <td align="center">@SERVER34_MD5@ (<a
-                                        href="@SERVER34@.md5">MD5</a>)</td>
+                                <td align="center">@SERVER34_SHA1@ (<a
+                                        href="@SERVER34@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@SERVER35@"><img
@@ -261,8 +261,8 @@
                                      /></a></td>
                                 <td align="center">@SERVER35_SIZE@</td>
                                 <td>@SERVER35_BASE@</td>
-                                <td align="center">@SERVER35_MD5@ (<a
-                                        href="@SERVER35@.md5">MD5</a>)</td>
+                                <td align="center">@SERVER35_SHA1@ (<a
+                                        href="@SERVER35@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
@@ -314,8 +314,8 @@
                                      /></a></td>
                                 <td align="center">@VM_SIZE@</td>
                                 <td>@VM_BASE@</td>
-                                <td align="center">@VM_MD5@ (<a href="@VM@.md5"
-                                        >MD5</a>)</td>
+                                <td align="center">@VM_SHA1@ (<a href="@VM@.sha1"
+                                        >SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
@@ -339,7 +339,7 @@
                                 <th width="269">API Documentation</th>
                                 <th width="92">Size</th>
                                 <th width="271">File Name</th>
-                                <th width="118">MD5 Checksum</th>
+                                <th width="118">SHA1 Checksum</th>
                             </tr>
                             <tr>
                                 <td><a href="@DOCS@"><img
@@ -348,8 +348,8 @@
                                      /></a></td>
                                 <td align="center">@DOCS_SIZE@</td>
                                 <td>@DOCS_BASE@</td>
-                                <td align="center">@DOCS_MD5@ (<a
-                                        href="@DOCS@.md5">MD5</a>)</td>
+                                <td align="center">@DOCS_SHA1@ (<a
+                                        href="@DOCS@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
@@ -382,8 +382,8 @@
                                      /></a></td>
                                 <td align="center">@PYTHON34_SIZE@</td>
                                 <td>@PYTHON34_BASE@</td>
-                                <td align="center">@PYTHON34_MD5@ (<a
-                                        href="@PYTHON34@.md5">MD5</a>)</td>
+                                <td align="center">@PYTHON34_SHA1@ (<a
+                                        href="@PYTHON34@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@PYTHON35@"><img
@@ -392,8 +392,8 @@
                                      /></a></td>
                                 <td align="center">@PYTHON35_SIZE@</td>
                                 <td>@PYTHON35_BASE@</td>
-                                <td align="center">@PYTHON35_MD5@ (<a
-                                        href="@PYTHON35@.md5">MD5</a>)</td>
+                                <td align="center">@PYTHON35_SHA1@ (<a
+                                        href="@PYTHON35@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
@@ -421,8 +421,8 @@
                                      /></a></td>
                                 <td align="center">@JAVA35_SIZE@</td>
                                 <td>@JAVA35_BASE@</td>
-                                <td align="center">@JAVA35_MD5@ (<a
-                                        href="@JAVA35@.md5">MD5</a>)</td>
+                                <td align="center">@JAVA35_SHA1@ (<a
+                                        href="@JAVA35@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
@@ -443,8 +443,8 @@
                                         alt="Zipped Source Code" /></a></td>
                                 <td align="center">@SOURCE_CODE_SIZE@</td>
                                 <td>@SOURCE_CODE_BASE@</td>
-                                <td align="center">@SOURCE_CODE_MD5@ (<a
-                                        href="@SOURCE_CODE@.md5">MD5</a>)</td>
+                                <td align="center">@SOURCE_CODE_SHA1@ (<a
+                                        href="@SOURCE_CODE@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
