--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -160,15 +160,15 @@
                                 href="@DOC_URL@/users/clients-overview.html#omero-importer"
                                 >OMERO.importer</a> and <a
                                 href="@DOC_URL@/users/clients-overview.html#omero-editor"
-                                >OMERO.editor</a> and requires Java Version
-                                <strong>1.6</strong> or higher.</p>
+                                >OMERO.editor</a> and requires Java
+                                <strong>6</strong> or higher.</p>
                     </li>
                     <li>
                         <p> Mac OS X users should use the clients matching
                             their installed Java version. MacOS X 10.7 and
                             later should install the latest Java and use the
-                            Java7+ downloads. MacOS X 10.6 users can only use
-                            the Java6 download.</p>
+                            Java 7+ downloads. MacOS X 10.6 users can only use
+                            the Java 6 download.</p>
                     </li>
                     <li>
                         <p> OMERO.web is part of the server package, so
