--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -112,64 +112,58 @@
                     <table width="800" border="0" cellpadding="5" summary="OMERO client downloads">
                         <tbody>
                             <tr>
-                                <th width="269">Clients</th>
+                                <th width="269">Client</th>
                                 <th width="85">Size</th>
                                 <th width="271">File Name</th>
                                 <th width="125">Checksum</th>
                             </tr>
                             <tr>
-                                <td><a href="@WIN_CLIENTS@"><img
+                                <td><a href="@WIN_INSIGHT@"><img
                                         src="images/windows_download.png"
-                                        alt="Windows Client Download"
+                                        alt="Windows Insight Download"
                                      /></a></td>
-                                <td align="center">@WIN_CLIENTS_SIZE@</td>
-                                <td>@WIN_CLIENTS_BASE@</td>
-                                <td align="center">@WIN_CLIENTS_SHA1@ (<a
-                                        href="@WIN_CLIENTS@.sha1">SHA1</a>)</td>
+                                <td align="center">@WIN_INSIGHT_SIZE@</td>
+                                <td>@WIN_INSIGHT_BASE@</td>
+                                <td align="center">@WIN_INSIGHT_SHA1@ (<a
+                                        href="@WIN_INSIGHT@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
-                                <td><a href="@MAC_JAVA7+_CLIENTS@"><img
+                                <td><a href="@MAC_JAVA7+_INSIGHT@"><img
                                         src="images/mac_download_java7.png"
-                                        alt="Mac OS X (Java 7+) Client Download"
+                                        alt="Mac OS X (Java 7+) Insight Download"
                                      /></a></td>
-                                <td align="center">@MAC_JAVA7+_CLIENTS_SIZE@</td>
-                                <td>@MAC_JAVA7+_CLIENTS_BASE@</td>
-                                <td align="center">@MAC_JAVA7+_CLIENTS_SHA1@ (<a
-                                        href="@MAC_JAVA7+_CLIENTS@.sha1">SHA1</a>)</td>
+                                <td align="center">@MAC_JAVA7+_INSIGHT_SIZE@</td>
+                                <td>@MAC_JAVA7+_INSIGHT_BASE@</td>
+                                <td align="center">@MAC_JAVA7+_INSIGHT_SHA1@ (<a
+                                        href="@MAC_JAVA7+_INSIGHT@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
-                                <td><a href="@MAC_JAVA6_CLIENTS@"><img
+                                <td><a href="@MAC_JAVA6_INSIGHT@"><img
                                         src="images/mac_download_java6.png"
-                                        alt="Mac OS X Client Download"
+                                        alt="Mac OS X Insight Download"
                                      /></a></td>
-                                <td align="center">@MAC_JAVA6_CLIENTS_SIZE@</td>
-                                <td>@MAC_JAVA6_CLIENTS_BASE@</td>
-                                <td align="center">@MAC_JAVA6_CLIENTS_SHA1@ (<a
-                                        href="@MAC_JAVA6_CLIENTS@.sha1">SHA1</a>)</td>
+                                <td align="center">@MAC_JAVA6_INSIGHT_SIZE@</td>
+                                <td>@MAC_JAVA6_INSIGHT_BASE@</td>
+                                <td align="center">@MAC_JAVA6_INSIGHT_SHA1@ (<a
+                                        href="@MAC_JAVA6_INSIGHT@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
-                                <td><a href="@LINUX_CLIENTS@"><img
+                                <td><a href="@LINUX_INSIGHT@"><img
                                         src="images/linux_download.png"
-                                        alt="Linux Client Download" /></a></td>
-                                <td align="center">@LINUX_CLIENTS_SIZE@</td>
-                                <td>@LINUX_CLIENTS_BASE@</td>
-                                <td align="center">@LINUX_CLIENTS_SHA1@ (<a
-                                        href="@LINUX_CLIENTS@.sha1">SHA1</a>)</td>
+                                        alt="Linux Insight Download" /></a></td>
+                                <td align="center">@LINUX_INSIGHT_SIZE@</td>
+                                <td>@LINUX_INSIGHT_BASE@</td>
+                                <td align="center">@LINUX_INSIGHT_SHA1@ (<a
+                                        href="@LINUX_INSIGHT@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <ul>
+
+
                     <li>
-                        <p>Each client package includes <a
-                                href="@DOC_URL@/users/clients-overview.html#omero-insight"
-                                >OMERO.insight</a> and <a
-                                href="@DOC_URL@/users/clients-overview.html#omero-importer"
-                                >OMERO.importer</a>  and requires Java Version
-                                <strong>6</strong> or higher.</p>
-                    </li>
-                    <li>
-                        <p> Users of Mac OS X should use the clients matching
+                        <p> Users of Mac OS X should use the client matching
                             their installed Java version. Users of MacOS X
                             10.7 and later should install the <a href ="http://www.oracle.com/technetwork/java/javase/downloads/index.html"
                             >latest Java Runtime Environment (JRE)</a> and use
@@ -182,7 +176,7 @@
                             locally.</p>
                     </li>
                     <li>
-                        <p>Full instructions for installing the clients are on
+                        <p>Full instructions for installing the client are on
                             the Help website: <a href="@HELP_URL@"
                                 target="_blank">Getting Started with
                                 OMERO.insight Version @VERSION@</a></p>
